tests/type_errors/list_concat_different_types.nos
# expect: [1, 2, 3, a, b, c]
# Nostos supports heterogeneous lists (like Python).
# [Int] ++ [String] is valid, not a type error.
main() = [1, 2, 3] ++ ["a", "b", "c"]
